[build-system]
requires = ["setuptools>=65.6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "uorf-predictor"
description = "Paquete para predecir la traducción de uORFs en base a características genómicas y Ribo-seq"
authors = [
    { name = "Alejandro Pinto Alba", email = "alejandropintoalba@gmail.com" }
]

readme = "README.md"
requires-python = ">=3.10"
keywords = ["uorf", "ribo-seq", "library"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

dependencies = [
    "numpy >= 1.23, <2.0",
    "pandas >= 2.0.0, <3.0",
    "requests >= 2.32.0, <3.0",
    "pysam >= 0.22.0, <0.23",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0, <9.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
homepage = "https://github.com/Ale-pinto-alba/utrfx"
repository = "https://github.com/Ale-pinto-alba/utrfx.git"
documentation = "https://github.com/Ale-pinto-alba/utrfx"
bugtracker = "https://github.com/Ale-pinto-alba/utrfx/issues"

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "utrfx.__version__" }
